--- a/app/views/end-to-end/post-mvp2/eligibility/funding/check-details.html
+++ b/app/views/end-to-end/post-mvp2/eligibility/funding/check-details.html
@@ -112,7 +112,7 @@
                 <tbody class="govuk-table__body">
                     <tr class="govuk-table__row--no-border">
                         <th  scope="row" class="govuk-table__header">
-                            <strong>Business name</strong>
+                            <strong>Name</strong>
                         </th>
                         <td class="govuk-table__cell">
                            {{ data['farmer-title'] or 'Imaginary Farms Ltd' }} 
@@ -128,7 +128,7 @@
                     </tr>
                     <tr class="govuk-table__row--no-border">
                         <th  scope="row" class="govuk-table__header">
-                            <strong>Business address</strong>
+                            <strong>Address</strong>
                         </th>
                         <td class="govuk-table__cell">
                             {{ data['farmer-address1'] }} {{ data['farmer-address2'] or '2 Lane Road, Farm Valley'}}<br>
@@ -138,7 +138,7 @@
                     </tr>
                     <tr class="govuk-table__row--no-border">
                         <th  scope="row" class="govuk-table__header">
-                            <strong>Business postcode</strong>
+                            <strong>Postcode</strong>
                         </th>
                         <td class="govuk-table__cell">
                             {{ data['farmer-postcode'] or 'BO12 0LN' }}
