--- a/app/views/end-to-end/post-mvp2/front-door/grant-page.html
+++ b/app/views/end-to-end/post-mvp2/front-door/grant-page.html
@@ -38,7 +38,7 @@
           <td class="govuk-table__cell">WM-VMA-1234</td>
           {# <td class="govuk-table__cell">No</td> #}
           <td class="govuk-table__cell">10 December 24</td>
-          <td class="govuk-table__cell">Need to submit expression of interest</td>
+          <td class="govuk-table__cell">Need to register interest</td>
           <td class="govuk-table__cell">
             <form action="../task-list2/list-1-1" method="get">
             <button type="submit" class="govuk-button govuk-!-margin-bottom-0 govuk-button-custom" data-module="govuk-button">
