--- a/app/views/end-to-end/post-mvp2/task-list2/list-1-1.html
+++ b/app/views/end-to-end/post-mvp2/task-list2/list-1-1.html
@@ -90,7 +90,7 @@
                 <li>
                     <!-- Application Scenario 2a -->
                 <h2 class="govuk-prototype-kit-task-list__section">
-                    <span class="govuk-prototype-kit-task-list__section-number">2. </span> Prepare your application
+                    <span class="govuk-prototype-kit-task-list__section-number">2. </span> Prepare application
                 </h2>
 
                 <ul class="govuk-task-list">
@@ -137,7 +137,7 @@
 
             <!-- Agreement Scenario 1 -->
             <h2 class="govuk-prototype-kit-task-list__section">
-            <span class="govuk-prototype-kit-task-list__section-number">3. </span> Submit your application
+            <span class="govuk-prototype-kit-task-list__section-number">3. </span> Submit application
             </h2>
             <div class="govuk-inset-text">
                 You must submit your full application by 11.59pm on <strong>3 January 2026</strong>
